# src/users/dto/join.dto.ts
@@ -1,4 +1,4 @@
-export interface IRegisterInput {
+export interface IJoinInput {
   /**
    * @format email
    */
